--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.5",
+    "crypto-js": "^4.2.0",
     "install": "^0.13.0",
     "next": "14.0.2",
     "react": "^18",
