--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.38.5",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
+    "get-stream": "^8.0.1",
     "install": "^0.13.0",
+    "micro-cors": "^0.1.1",
     "next": "14.0.2",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
     "react-cookie": "^6.1.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.48.2"
+    "react-hook-form": "^7.48.2",
+    "stream-to-buffer": "^0.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/micro-cors": "^0.1.5",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
